# post-training

./: .gitignore  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  README.md  data-selection-datasets-stats-decontaminated.yaml  pyproject.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug-report.yml  feature-request.yml
.github/workflows/: pr-conventional-commit.yml  pre-commit.yml
configs/: dpo.yaml  sft.yaml
configs/data_selection/: lmsys-chat-1m-decontaminated.yaml  nemotron-post-training-dataset-v2-decontaminated.yaml  open-perfectblend-decontaminated.yaml  orca-agentinstruct-1m-v1-decontaminated.yaml  smoltalk2-decontaminated.yaml
configs/datasets/: tulu3.yaml
configs/deepspeed/: z2.json  zero2.yaml  zero3.yaml  zero3_lowmem.yaml
configs/dpo/: tulu3.yaml
configs/llamafactory/: long-context.yaml  long_context-fineweb.yaml  long_context-mv100bt-curated_instruct.yaml  long_context-mv100bt-web_curated.yaml  long_context-mv100bt.yaml  long_context-nemotron.yaml  long_context.yaml  submit.yaml
configs/llamafactory/deepspeed/: ds_z3_partial_offload.json
configs/sft/: tulu3.yaml
configs/trl/: dolci_instruct_sft_container.yaml  dolci_instruct_sft_container_debug.yaml  dolci_instruct_sft_container_short.yaml  dpo.yaml  dpo_throughput.yaml  olmo3-sft-think.yaml  sft-mxv-mcmc.yaml  sft-mxv.yaml  sft.yaml  sft_throughput.yaml  sft_throughput_32b_think.yaml
configs/trl/accelerate/: fsdp2.yaml  zero3_no_offload.yaml
configs/trl/sft/: tulu3.yaml
containers/: llamafactory_jupiter.def  trl_jupiter.def
data/llamafactory/: dataset_info.json
env/: jupiter.env  leonardo.env
notes/: TODOs.md
scripts/: data.py  download_data_selection_hf_cache.sh  generate_data_selection_token_stats.py  huggingface.py  inspect_data.py  inspect_tokenized.py  pretokenize.py  run_data_selection_token_stats.sbatch  submit.py  train.py  wandb.py  wb.py
scripts/data/: cache.py  download.py  pretokenize.py
scripts/diagnostics/: check_label_masking.py  run_check_label_masking.sh  run_check_rope_swa_divergence.sh  run_verify_rope_swa_bug.sh  verify_rope_swa_bug.py
scripts/diagnostics/check_rope_swa_divergence/: README.md  compare.py  hf_forward.py  patch_olmo3_swa_rope.py  tokenize_input.py  vllm_forward.py
scripts/sweep/: plot_sft_throughput.py  resubmit_r2.sh  submit_test_script.sh  sweep_32b_think_throughput.sh  sweep_sft_throughput.sh  sweep_throughput.sh  throughput_sweep.py  tokenize_32b_think.sh
scripts/train/: sft.py
scripts/trl/data/: cache.py  cache_dry_run.py
scripts/trl/train/: dpo.py
slurm/: download_dataset.sh  pretokenize.sh  submit_multinode.sh
slurm/llamafactory/: submit.sh  submit_multinode.sh
slurm/trl/: download_dataset.sh  submit_multinode.sh
src/post_training/: __init__.py  backend.py  config.py
src/post_training/callbacks/: inference_checkpoint.py  mfu.py  profile.py  throughput.py
src/post_training/chat_templates/: registry.py
src/post_training/chat_templates/templates/: apertus.jinja  chatml.jinja  datamix.jinja  olmo3-instruct-sft.jinja  olmo3-think-sft.jinja  olmo3.jinja  tulu3.jinja
src/post_training/data/: loader.py  transforms.py
src/post_training/methods/: __init__.py  common.py  dpo.py  sft.py
src/post_training/patches/: __init__.py  olmo3_swa_rope.py
src/post_training/slurm/: job.sh.jinja  job_llamafactory.sh.jinja  job_trl_container.sh.jinja  launcher.py
src/post_training/utils/: guardrails.py  logging.py  paths.py  prefetch.py  token_stats.py
tests/: test_backend.py  test_chat_template_masking.py  test_config.py  test_data_loader.py  test_lr_scheduler_kwargs.py  test_slurm_render.py  test_token_stats.py  test_transforms.py
