[project]
name = "post-training"
version = "0.1.0"
description = "A modular post-training framework for LLMs (SFT, DPO)"
readme = "README.md"
requires-python = ">=3.12,<3.13"
# Minimal deps for job submission (scripts/submit.py).
# Training deps live in [project.optional-dependencies.trl].
dependencies = [
    "omegaconf",
    "jinja2",
    "pyyaml",
    "wandb",
    "huggingface-hub",
    "psutil",
]

[project.optional-dependencies]
trl = [
    "torch==2.9.1+cu126",
    "trl",
    "deepspeed",
    "transformers",
    "datasets>4.5.0",
    "accelerate",
    "kernels",
    "flash_attn",
    "liger-kernel",
    "tensorboard",
]
flash-attn-2 = ["flash-attn"]
dev = ["pre-commit"]

[tool.uv]
extra-index-url = ["https://download.pytorch.org/whl/cu126"]
index-strategy = "unsafe-best-match"
environments = [
    "sys_platform == 'linux' and platform_machine == 'x86_64'"
]

[tool.uv.sources]
flash-attn = { url = "https://github.com/mjun0812/flash-attention-prebuild-wheels/releases/download/v0.7.16/flash_attn-2.8.3%2Bcu126torch2.9-cp312-cp312-linux_x86_64.whl" }

[tool.black]
line-length = 100
target-version = ["py312"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
ignore = ["E501", "E402"]

[tool.ruff.lint.isort]
known-first-party = ["post_training"]


